--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
@@ -157,58 +157,66 @@
                                     </tr>
                                 </table>
                                 <div id="divShowCase" style="display:none; padding:0px;width:100%">
-                                    <table class="tableform" border="0" style="width:1200px">
-                                        <tr>
-                                            <td style="width:200px;min-width:200px;">
-                                                @Translation.Get("Koppla till åtgärd", Enums.TranslationSource.TextTranslation)
-                                            </td>
-                                            <td>
-                                                <select id="savaAndClose" name="CaseSolution.SaveAndClose" @(Model.CaseSolution.ShowInsideCase == 1 ? "" : "disabled='true'")>
-                                                    @foreach (var action in Model.ActionList)
-                                                    {
-                                                        <option value="@action.Value" @(action.Selected ? "selected" : "")> @action.Text </option>}
+                                    <div class="row">
+                                        <div class="span12">
 
-                                                    @if (Model.CaseSolution.ShowInsideCase != 1)
+                                            <table class="tableform" border="0">
+                                                <tr>
+                                                    <td style="width:200px;">
+                                                        @Translation.Get("Koppla till åtgärd", Enums.TranslationSource.TextTranslation)
+                                                    </td>
+                                                    <td>
+                                                        <select id="savaAndClose" name="CaseSolution.SaveAndClose" @(Model.CaseSolution.ShowInsideCase == 1 ? "" : "disabled='true'")>
+                                                            @foreach (var action in Model.ActionList)
                                                     {
-                                                        <option value="-2" selected> @saveDropDownText </option>}
-                                                </select>
-                                            </td>
-                                            @*Split selection*@
-                                            @*// TODO: Use a enable button to show (and reset value if saved when disabled) of split to dropdown*@
-                          
-                                            <td style="width:200px;min-width:200px;padding-left:20px;">
-                                                @Translation.Get("Ärendemall för underärende", Enums.TranslationSource.TextTranslation)
-                                            </td>
-                                            <td>
-                                                @Html.DropDownListFor(model => model.CaseSolution.SplitToCaseSolution_Id, Model.SplitToCaseSolutions.Select(o => new SelectListItem() { Text = o.Name + (o.CaseSolutionCategory == null ? "" : " " + o.CaseSolutionCategory.Name), Value = o.Id.ToString() }).ToList(), "")
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                @Translation.Get("Koppla till", Enums.TranslationSource.TextTranslation)
-                                            </td>
-                                            <td>
-                                                @if (Model.CaseSolution.ShowInsideCase == 1)
+                                                            <option value="@action.Value" @(action.Selected ? "selected" : "")> @action.Text </option>}
+
+                                                            @if (Model.CaseSolution.ShowInsideCase != 1)
+                                                    {
+                                                            <option value="-2" selected> @saveDropDownText </option>}
+                                                        </select>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>
+                                                        @Translation.Get("Koppla till", Enums.TranslationSource.TextTranslation)
+                                                    </td>
+                                                    <td>
+                                                        @if (Model.CaseSolution.ShowInsideCase == 1)
                                                 {
-                                                    @Html.DropDownListFor(model => model.CaseSolution.ConnectedButton, Model.ButtonList, "", new { @Id = "ConnectTo", @onchange = "GetSelectedTextValue(this)" })
+                                                        @Html.DropDownListFor(model => model.CaseSolution.ConnectedButton, Model.ButtonList, "", new { @Id = "ConnectTo", @onchange = "GetSelectedTextValue(this)" })
                                                 }
                                                 else
                                                 {
-                                                    @Html.DropDownListFor(model => model.CaseSolution.ConnectedButton, Model.ButtonList, "", new { @Id = "ConnectTo", disabled = "disabled", @onchange = "GetSelectedTextValue(this)" })
+                                                        @Html.DropDownListFor(model => model.CaseSolution.ConnectedButton, Model.ButtonList, "", new { @Id = "ConnectTo", disabled = "disabled", @onchange = "GetSelectedTextValue(this)" })
                                                 }
 
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                @Translation.Get("Ersätt alltid befintliga värden", SessionFacade.CurrentLanguageId)
-                                            </td>
-                                            <td>
-                                                <input type="checkbox" name="CaseSolution.OverWritePopUp" @(Model.CaseSolution.OverWritePopUp == 1 ? "checked=checked" : "") value="1" class="switchcheckbox" />
-                                                <input type="hidden" name="CaseSolution.OverWritePopUp" value="0" />
-                                            </td>
-                                        </tr>
-                                    </table>
+                                                    </td>
+                                                </tr>
+                                                @*Split selection*@
+                                                @*// TODO: Use a enable button to show (and reset value if saved when disabled) of split to dropdown*@
+
+
+                                                <tr>
+                                                    <td>
+                                                        @Translation.Get("Ärendemall för underärende", Enums.TranslationSource.TextTranslation)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DropDownListFor(model => model.CaseSolution.SplitToCaseSolution_Id, Model.SplitToCaseSolutions.Select(o => new SelectListItem() { Text = o.Name + (o.CaseSolutionCategory == null ? "" : " " + o.CaseSolutionCategory.Name), Value = o.Id.ToString() }).ToList(), "")
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>
+                                                        @Translation.Get("Ersätt alltid befintliga värden", SessionFacade.CurrentLanguageId)
+                                                    </td>
+                                                    <td>
+                                                        <input type="checkbox" name="CaseSolution.OverWritePopUp" @(Model.CaseSolution.OverWritePopUp == 1 ? "checked=checked" : "") value="1" class="switchcheckbox" />
+                                                        <input type="hidden" name="CaseSolution.OverWritePopUp" value="0" />
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
