[FIX] #58181 "No result" in user search and script

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -3836,6 +3836,7 @@ div.modal-body.max-height-600 {
 .case-dropdown-area {
     display: inline-flex;
     text-align: left;
+    padding-top: 30px;
 }
 
 .case-dropdown-div {
