[FIX] #57745 Setting for group templates, Admin - SelfServiceSetting

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
@@ -111,7 +111,7 @@
                                 <td>
                                     <input type="checkbox" name="customer.ShowCoWorkersOnExternalPage" @(Model.Customer.ShowCoWorkersOnExternalPage == 1 ? "checked=checked" : "") value="1" />
                                     <input type="hidden" name="customer.ShowCoWorkersOnExternalPage" value="0" />
-                                    &nbsp; &nbsp; @Translation.Get("Visa kundspecifik sida", Enums.TranslationSource.TextTranslation)
+                                    &nbsp; &nbsp; @Translation.Get("Visa Kundspecifik sida", Enums.TranslationSource.TextTranslation)
                                 </td>
                             </tr>
                             <tr>
@@ -119,7 +119,7 @@
                                 <td>
                                     <input type="checkbox" name="customer.GroupCaseTemplates" @(Model.Customer.GroupCaseTemplates == 1 ? "checked=checked" : "") value="1" />
                                     <input type="hidden" name="customer.GroupCaseTemplates" value="0" />
-                                    &nbsp; &nbsp; @Translation.Get("Gruppera ärendemallar", Enums.TranslationSource.TextTranslation)
+                                    &nbsp; &nbsp; @Translation.Get("Gruppera Ärendemallar", Enums.TranslationSource.TextTranslation)
                                 </td>
                             </tr>
                         </table>
