--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseInformation.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseInformation.cshtml
@@ -11,6 +11,7 @@
                     Model.CaseFieldSettingWithLangauges,
                     field,
                     Model.case_.Customer_Id,
+                    Model.IsCaseReopened,
                     SessionFacade.CurrentLanguageId,
                     defaultCaption);
 
