--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -505,6 +505,7 @@
 					Model.CaseFieldSettingWithLangauges,
 					field,
 					Model.case_.Customer_Id,
+                    Model.IsCaseReopened,
 					SessionFacade.CurrentCaseLanguageId,
 					defaultCaption);
 	}
